--- a/contacto.html
+++ b/contacto.html
@@ -34,13 +34,39 @@
         </div>
     </nav>
 
-     <!-- Sección de contacto -->
-     <section id="contact">
+    <header class="banner_contact" id="banner_contact">
+        <div class="overlay"></div>
         <div class="container">
-            <h2>Contacto</h2>
-            <!-- Agregar formulario de contacto o detalles de contacto -->
+            <h1>Contacto</h1>
+            <div class="row justify-content-center">
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h5 class="card-title">LinkedIn</h5>
+                            <a href="https://www.linkedin.com/in/josé-pablo-mendoza-mariscal-644261252" target="_blank" class="btn btn-dark" style="background-color: #6A097D; border-color: #C060A1;"><i><img src="./src/icons/linkedin.png" alt="LinkedIn" style="width: 20px; height: 20px;"></i> Perfil</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card text-center h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">Correo Electrónico</h5>
+                            <p class="card-text" style="font-size: 1.2em; color: #007BFF;">jospmdz@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h5 class="card-title">Whatsapp</h5>
+                            <a href="https://wa.me/523331414347" target="_blank" class="btn btn-dark" style="background-color: #6A097D; border-color: #C060A1;"><i><img src="./src/icons/whatsapp.png" alt="Whatsapp" style="width: 20px; height: 20px;"></i> Enviame un mensaje!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </section>
+        </div>
+    </header>
 
     <script src="./js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
