--- a/proyectos.html
+++ b/proyectos.html
@@ -37,7 +37,7 @@
     <!-- Sección de proyectos -->
     <section id="proyectos" class="mt-5">
         <div class="container">
-            <h2 class="mb-5">Proyectos</h2>
+            <h2 class="mb-5 text-center" style="color: white; text-shadow: 2px 2px 4px #000; padding: 10px; border-radius: 5px;">Proyectos</h2>
             <!-- Tarjeta del Proyecto 1 -->
             <div class="card">
                 <img src="./src/projects/HeavyMadness.png" class="card-img-top" alt="Proyecto 1" style="object-fit: cover;width: 100%;height: 250px;">
@@ -45,10 +45,9 @@
                     <h5 class="card-title">Heavy Madness</h5>
                     <p class="card-text">VideoJuego 2D estilo pixel art.</p>
                     <p class="card-text"><a href="https://heavy-madness.netlify.app" target="_blank" style="text-decoration: none;"><strong>Sitio Web</strong></a></p>
-                    <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalProyecto1">Ver más</a>
+                    <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalProyecto1" style="background-color: #6A097D; border-color: #C060A1;">Ver más</a>
                 </div>
             </div>
-            <!-- Agrega más tarjetas de proyectos según sea necesario -->
         </div>
     </section>
 
@@ -76,9 +75,7 @@
                         <div class="carousel-item">
                             <img src="./src/projects/hm2.png" class="d-block w-100" alt="Imagen 2">
                         </div>
-                        <!-- Agrega más imágenes según sea necesario -->
                     </div>
-                    <!-- Controles del carousel -->
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselProyecto1" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Anterior</span>
@@ -91,7 +88,6 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                <!-- Agrega aquí cualquier otro botón que necesites -->
             </div>
         </div>
     </div>
