modificaciones de direccion de imagenes

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <a href="sobreMi.html"><h1>Jose Pablo Mendoza Mariscal</h1></a>
             <p class="subtitle">FullStack Java Developer Junior</p>
             <div class="social-icons">
-                <a href="https://github.com/josmdz" target="_blank"><i><img src="/src/icons/github.png" alt=""></i></a>
-                <a href="https://wa.me/523331414347" target="_blank"><i><img src="/src/icons/whatsapp.png" alt=""></i></a>
-                <a href="https://www.linkedin.com/in/josé-pablo-mendoza-mariscal-644261252" target="_blank"><i><img src="/src/icons/linkedin.png" alt=""></i></a>
+                <a href="https://github.com/josmdz" target="_blank"><i><img src="./src/icons/github.png" alt=""></i></a>
+                <a href="https://wa.me/523331414347" target="_blank"><i><img src="./src/icons/whatsapp.png" alt=""></i></a>
+                <a href="https://www.linkedin.com/in/josé-pablo-mendoza-mariscal-644261252" target="_blank"><i><img src="./src/icons/linkedin.png" alt=""></i></a>
                 <!-- Agrega más botones según sea necesario -->
             </div>
         </div>
