--- a/sobreMi.html
+++ b/sobreMi.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="card-image">
-                <img src="/src/WhatsApp Image 2024-02-12 at 8.12.14 PM-Photoroom.png-Photoroom.png" alt="Jos" id="img_jos">
+                <img src="./src/jos.png" alt="Jos" id="img_jos">
             </div>
         </div>
     </section>
